[gd_scene load_steps=2 format=2]

[ext_resource path="res://WeatherApp/WeatherApp.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="WeatherInfo" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -101.0
margin_right = 103.0
margin_bottom = -21.0
text = "weather information
here"

[node name="CityInput" type="LineEdit" parent="."]
margin_left = 23.0
margin_top = 200.0
margin_right = 131.0
margin_bottom = 224.0
placeholder_text = "City"

[node name="StateInput" type="LineEdit" parent="."]
margin_left = 157.0
margin_top = 200.0
margin_right = 265.0
margin_bottom = 224.0
placeholder_text = "State Code"

[node name="CountryInput" type="LineEdit" parent="."]
margin_left = 301.0
margin_top = 200.0
margin_right = 409.0
margin_bottom = 224.0
placeholder_text = "Country"

[node name="UnitInput" type="LineEdit" parent="."]
margin_left = 437.0
margin_top = 200.0
margin_right = 570.0
margin_bottom = 224.0
placeholder_text = "imperial or metric"

[node name="TempButton" type="Button" parent="."]
margin_left = 365.0
margin_top = 242.0
margin_right = 458.0
margin_bottom = 262.0
text = "Get Weather"
